--- a/test.yaml
+++ b/test.yaml
@@ -27,6 +27,8 @@ student: seq
   -bob
   -bill
 
+
+#anchor 
 name: &name Alex
 role:
   age: 83
@@ -60,6 +62,4 @@ base: &base
 
 foo:
   <<: *base 
-
-
 
